<resources>
    <string name="app_name">ParkirQyu</string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="login">Login</string>
    <string name="connection_error">Terjadi Kesalahan Koneksi</string>
    <string name="data_empty">Data Tidak Ada</string>
    <string name="simpan">Simpan</string>
    <string name="batal">Batal</string>
    <string name="ubah">Ubah</string>
    <string name="tambah">Tambah</string>
    <string name="hint_nama">Nama</string>
    <string name="hint_alamat">Alamat</string>
    <string name="hint_tempat_lahir">Tempat Lahir</string>
    <string name="hint_tanggal_lahir">Tanggal Lahir(dd/mm/yyyy)</string>
    <string name="laki_laki">Laki-Laki</string>
    <string name="perempuan">Perempuan</string>
    <string name="admin">Admin</string>
    <string name="petugas">Petugas Parkir</string>
    <string name="karyawan">Karyawan</string>
    <string name="data_incompleted">Harap Lengkapi Data Terlebih Dahulu</string>
    <string name="add_data_success">Menambah Data Berhasil</string>
    <string name="edit_data_success">Merubah Data Berhasil</string>
    <string name="konfirmasi">Konfirmasi</string>
    <string name="konfirmasi_hapus">Apakah Anda Yakin untuk Menghapus Data?</string>
    <string name="konfirmasi_yakin">Yakin</string>
    <string name="konfirmasi_batal">Batal</string>
    <string name="delete_data_success">Menghapus Data Berhasil</string>
    <string name="hapus">Hapus</string>
    <string name="hint_nomor_registrasi">Nomor Registrasi</string>
    <string name="hint_nama_pemilik">Nama Pemilik</string>
    <string name="hint_merk">Merk</string>
    <string name="hint_type">Type</string>
    <string name="mobil">Mobil</string>
    <string name="motor">Motor</string>
    <string name="hint_tahun_pembuatan">Tahun Pembuatan</string>
    <string name="hint_nomor_rangka">Nomor Rangka</string>
    <string name="hint_nomor_mesin">Nomor Mesin</string>
    <string name="hint_masuk">Masuk</string>
    <string name="btn_masuk">Masuk</string>
    <string name="btn_batal">Batal</string>
    <string name="btn_proses">Proses</string>
    <string name="btn_ok">Oke</string>
    <string name="btn_bayar_manual">Bayar Manual</string>
    <string name="btn_bayar">Bayar</string>
    <string name="hint_nominal">Nominal</string>
    <string name="btn_topup">Topup</string>
    <string name="btn_ubah_password">Ubah Password</string>
    <string name="hint_old_password">Password Lama</string>
    <string name="hint_konfirmasi_password">Konfirmasi Password</string>
    <string name="hint_new_password">Password Baru</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="konfirmas_reset_password">Apakah Anda Yakin untuk mereset password</string>
    <string name="reset_password_success">Reset Password Berhasil</string>
    <string name="hint_satu_jam">Satu Jam Pertama</string>
    <string name="hint_tiap_jam">Tiap Jam Berikutnya</string>
    <string name="hint_per_hari">Per Hari (24 Jam)</string>
    <string name="btn_lihat_log_transaksi">Lihat Log Transaksi</string>
</resources>
