<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="Parkir Manual"
        android:textSize="@dimen/_14ssp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp">

            <EditText
                android:id="@+id/edit_nomor_registrasi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_nomor_registrasi"
                android:inputType="textCapCharacters" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:id="@+id/ll_jenis_kendaraan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="Jenis Kendaraan"
                android:textSize="@dimen/_12ssp"/>

            <RadioGroup
                android:id="@+id/rg_jenis_kendaraan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/rb_mobil"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/mobil"
                    android:textSize="@dimen/_12ssp"/>

                <RadioButton
                    android:id="@+id/rb_motor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/motor"
                    android:textSize="@dimen/_12ssp"/>

            </RadioGroup>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_25sdp"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginRight="@dimen/_25sdp"
        android:layout_marginEnd="@dimen/_25sdp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_proses"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:text="@string/btn_proses"
            android:textSize="@dimen/_12ssp"/>

        <Button
            android:id="@+id/btn_batal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:text="@string/btn_batal"
            android:textSize="@dimen/_12ssp"/>

    </LinearLayout>

</LinearLayout>